force-app/main/default/objects/kfsell__Action_Plan__c/kfsell__Action_Plan__c.object-meta.xml
<CustomObject>
    <label>Action Plan</label>
    <nameField>
        <displayFormat>AP- {00000}</displayFormat>
        <label>Action Plan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>