force-app/main/default/objects/kfsell__Action_Plan__c/fields/kfsell__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Action_Type__c</fullName>
    <label>ActionType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>