force-app/main/default/objects/kfsell__Action_Plan__c/fields/kfsell__AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>kfsell__AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>