force-app/main/default/objects/kfsell__Action_Plan__c/fields/kfsell__Blue_Sheet__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Blue_Sheet__c</fullName>
    <label>Blue Sheet</label>
    <referenceTo>kfsell__Blue_Sheet__c</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>Action_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>