force-app/main/default/objects/kfsell__Action_Plan__c/fields/kfsell__Description__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>