force-app/main/default/objects/kfsell__Action_Plan__c/fields/kfsell__Priority__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>