force-app/main/default/objects/kfsell__Action_Plan__c/listViews/kfsell__All.listView-meta.xml
<ListView>
    <fullName>kfsell__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>